# vEcoli

./: .NOTES  .gitignore  Makefile  NOTES  README.md  genindex.html  migration.ipynb  objects.inv  py-modindex.html  pyproject.toml  searchindex.js
_modules/: index.html
_modules/ecoli/experiments/: ecoli_master_sim.html
api/data_model/: base.py  connection.py  gateway.py  messages.py  simulation.py  vivarium.py
api/docker/: Dockerfile.community
api/gateway/: README.md  main.py
api/gateway/community/: README.md  app.py  auth.py  router.py
api/gateway/evolve/: app.py  auth.py  router.py  workflow.py
api/gateway/handlers/: __init__.py  app_config.py  multi.py  simulation.py  streaming.py  vivarium.py
api/shared/: registries.py
api/shared/configs/: app_config.json
api/shared/managers/: connection.py  pickle.py  registry.py
bigraph/processes/: metabolism.py
configs/: publish-uchc-hpc.json  publish.json
data/model/: single_state.json  single_topology.json  state-edit.json  state.json
data_model/: base_process.py
ecoli/: __init__.py
ecoli/analysis/multigeneration/: new_gene_counts.py
ecoli/analysis/multiseed/: ecocyc_table.py  subgenerational_expression_table.py
ecoli/analysis/multivariant/: average_monomer_counts.py  new_gene_translation_efficiency_heatmaps.py
ecoli/analysis/single/: mass_fraction_summary.py
ecoli/composites/ecoli_configs/: default.json  example.json  publish.json  topology.json
ecoli/composites_v2/: ecoli_master.py
ecoli/composites_v2/ecoli_configs/: README.md  __init__.py  metabolism_redux.json
ecoli/emitters/: parquet.py  secure.py
ecoli/experiments_v2/: ecoli_master_sim.py
ecoli/instances/: base.py
ecoli/migrated/: DEV.md  MIGRATION.md  README.md  __init__.py  allocator.py  bulk_timeline.py  cell_division.py  chemostat.py  chromosome_replication.py  chromosome_structure.py  complexation.py  concentrations_deriver.py  death_threshold.py  division_detector.py  enzyme_kinetics.py  equilibrium.py  global_clock.py  metabolism.py  metabolism_redux.py  partition.py  polypeptide_elongation.py  polypeptide_initiation.py  processes_to_migrate.todo  protein_degradation.py  registries.py  rna_degradation.py  rna_interference.py  rna_maturation.py  shape.py  tf_binding.py  tf_unbinding.py  transcript_elongation.py  transcript_initiation.py  two_component_system.py  unique_update.py
ecoli/migrated/antibiotics/: antibiotic_transport_odeint.py  antibiotic_transport_steady_state.py  cell_wall.py  conc_to_counts.py  death.py  lysis_initiation.py  murein_division.py  pbp_binding.py  permeability.py  tetracycline_ribosome_equilibrium.py
ecoli/migrated/environment/: derive_globals.py  diffusion_field.py  exchange.py  exchange_data.py  local_field.py  lysis.py  media_update.py  multibody_physics.py  reaction_diffusion_field.py
ecoli/migrated/listeners/: README.md  RNA_counts.py  aggregator.py  dna_supercoiling.py  mass_listener.py  monomer_counts.py  replication_data.py  ribosome_data.py  rna_synth_prob.py  rnap_data.py  unique_molecule_counts.py
ecoli/processes/: __init__.py  chromosome_replication.py  chromosome_structure.py  death_threshold.py  engine_process.py  publish_state.py  shape.py  unique_update.py
ecoli/processes/antibiotics/: cell_wall.py  death.py
ecoli/processes/migrated/: allocator.py  base_process.py  bulk_timeline.py  cell_division.py  chemostat.py  chromosome_replication.py  chromosome_structure.py  complexation.py  equilibrium.py  partition.py  rna_interference.py  rna_maturation.py  tf_binding.py  tf_unbinding.py  two_component_system.py  unique_update.py
ecoli/shared/: README.md  __init__.py  base.py  base_processes.py  data_model.py  dtypes.py  encryption.py.gpg  export.py  graph.py  interface.py  registration.py  registry.py  schemas.py  secure_emitter.py  tasks.py
ecoli/shared/scripts/: read_gpg.sh  write_gpg.sh
ecoli/shared/types/: register.py
ecoli/shared/utils/: compositions.py  log.py  migration.py  schemas.py
ecoli/shared/vivarium_instances/: base.py  factory.py
ecoli/types/: README.md  bulk.json  bytes.json  chromosome_domains.json  complexation_listener.json  metadata_array.json  oriCs.json  promoters.json  unum.json
migration/: migration_utils.py  safe_data.py
notebooks/: graphs.ipynb  migration.ipynb  pbg_migration.ipynb  sandbox.ipynb
pbg/: README.md  app.py  parse.py  transformers.py  translate.py
pbg/data_model/: base_process.py  base_step.py  meta.py  ports.py
pbg/test_input/: toy.py  tx.py
pbg/test_output/: cell_wall_edited.py  partition_converted.py  toy_converted.py  toy_edited.py  tx_converted.py
reference/: api_ref.html
reference/api/ecoli/: ecoli.library.cell_wall.hole_detection.html
runscripts/: analysis.py  flow.py  run.sh  workflow.py
runscripts/debug/: diff_simouts.py
runscripts/nextflow/: bigraph.nf  bigraph_workflow.py  vivarium.nf
wholecell/io/: simple_nats.py
wholecell/utils/: units.py
(+18 files in other folders)
