[build-system]
requires = [
    "setuptools",
    "wheel",
    "Cython",
    "numpy"
]
build-backend = "setuptools.build_meta"

[project]
name = "vEcoli"
version = "1.1.0"
description = "Whole Cell E. coli Model"
requires-python = "==3.12.8"
dependencies = [
    "numpy",
    "scipy",
    "biopython",
    "cvxpy",
    "cython",
    "dill",
    "duckdb",
    "ete3",
    "gcsfs",
    "pyarrow",
    "ipdb",
    "ipython",
    "jupyter",
    "line-profiler",
    "altair",
    "numba",
    "orjson",
    # Constraint can be removed once cvxpy supports newer ortools
    "ortools<=9.9.3963",
    "pandas",
    "polars",
    "pymunk",
    "scikit-image",
    "scikit-learn",
    "seaborn",
    "swiglpk",
    "sympy",
    "tqdm",
    "unum",
    "vivarium-core",
    "pysal",
    "opencv-python-headless",
    "statsmodels",
    "ecos",
    "nbclassic",
    "matplotlib",
    "pyqt5",
    "iteround",
    "wheel",
    "stochastic-arrow",
    "autograd",
    "typer>=0.15.2",
    "astor>=0.8.1",
    "process-bigraph>=0.0.28",
]

[project.scripts]
migrate = "pbg.app:cli"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
    "pre-commit",
]
docs = [
    "Sphinx",
    "sphinx-rtd-theme",
    "nbsphinx"
]
shared = [
    "cryptography>=44.0.2",
]

[tool.setuptools]
packages = [
    "ecoli",
    "migration", 
    "reconstruction",
    "runscripts",
    "validation",
    "wholecell",
    "pbg"
]
